[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lightbender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
]

[tool.maturin]
manifest-path = "raytracer/Cargo.toml"
module-name = "_raytracer_rs"
